--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "markdown_index": "/lessons/lesson24-bb.md",
+  "markdown_index": "/lessons/lesson25.md",
   "repository": "https://github.com/kvz/kbt2",
   "license": "MIT",
   "dependencies": {
