--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "favicon": "scripts/favicon.sh",
     "browsersync": "browser-sync start  --config bs-config-content.js",
     "install": "cp node_modules/marked/lib/marked.js ./js/",
-    "start": "npm run build && parallelshell 'npm run watch' 'npm run browsersync'",
+    "start": "npm run help && npm run build && parallelshell 'npm run watch' 'npm run browsersync'",
     "watch": "nodemon --verbose --watch . --ignore manifest.* --ext md,js,json --exec 'npm run build'",
     "build": "scripts/manifest.sh > ./manifest.appcache",
     "deploy": "npm run build && git checkout gh-pages && git pull && git add --all . && git commit -am 'New lessons' && git push"
