--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "kbt2": {
-    "markdownIndex": "/lessons/lesson39.md"
+    "markdownIndex": "/lessons/lesson40.md"
   },
   "repository": "https://github.com/kvz/kbt2",
   "license": "MIT",
   "scripts": {
-    "browsersync": "browser-sync start --config bs-config-content.js",
+    "serve": "browser-sync start --server --files 'manifest.*'",
     "build": "scripts/manifest.sh > ./manifest.appcache",
     "deploy": "npm run build && git checkout gh-pages && git pull && git add --all . && git commit -am 'New lessons' && git push",
     "favicon": "scripts/favicon.sh",
     "help": "cat USAGE.md",
     "install": "cp node_modules/marked/lib/marked.js ./js/",
-    "start": "npm run help && npm run build && parallelshell 'npm run watch' 'npm run browsersync'",
+    "start": "npm-run-all help build --parallel watch serve",
     "watch": "nodemon --verbose --watch . js --ignore manifest.* --ext md,js,json,sh,css --exec 'npm run build'"
   },
   "dependencies": {
@@ -21,7 +21,7 @@
     "manifoldjs": "0.1.0",
     "marked": "0.3.2",
     "nodemon": "1.8.1",
-    "parallelshell": "2.0.0",
+    "npm-run-all": "2.2.2",
     "send": "0.10.1"
   }
 }
