--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "kbt2": {
-    "markdownIndex": "/lessons/lesson42.md"
+    "markdownIndex": "/lessons/lesson43.md"
   },
   "repository": "https://github.com/kvz/kbt2",
   "license": "MIT",
   "scripts": {
-    "serve": "browser-sync start --server --files 'manifest.*'",
     "build": "scripts/manifest.sh > ./manifest.appcache",
     "deploy": "npm run build && git checkout gh-pages && git pull && git add --all . && git commit -am 'New lessons' && git push",
     "favicon": "scripts/favicon.sh",
     "help": "cat USAGE.md",
     "install": "cp node_modules/marked/lib/marked.js ./js/",
+    "serve": "browser-sync start --server --files 'manifest.*' 'package.json'",
     "start": "npm-run-all help build --parallel watch serve",
     "watch": "nodemon --verbose --watch . lessons js --ignore 'manifest.*' --ext md,js,json,sh,css --exec 'npm run build'"
   },
@@ -21,7 +21,6 @@
     "manifoldjs": "0.1.0",
     "marked": "0.3.2",
     "nodemon": "1.8.1",
-    "npm-run-all": "2.2.2",
-    "send": "0.10.1"
+    "npm-run-all": "2.2.2"
   }
 }
